RESOLVED FIXED77893
postMessage leaks MemoryEvent object
https://bugs.webkit.org/show_bug.cgi?id=77893
Summary postMessage leaks MemoryEvent object
Greg Simon
Reported 2012-02-06 12:14:39 PST
postMessage leaks MemoryEvent object
Attachments
Patch (1.67 KB, patch)
2012-02-06 12:16 PST, Greg Simon
no flags
Greg Simon
Comment 1 2012-02-06 12:16:22 PST
Adam Barth
Comment 2 2012-02-06 16:03:32 PST
Comment on attachment 125686 [details] Patch Oh my. Did I review that?
Levi Weintraub
Comment 3 2012-02-06 16:07:00 PST
That was *eeeeevil* abarth ;)
WebKit Review Bot
Comment 4 2012-02-06 16:41:46 PST
Comment on attachment 125686 [details] Patch Clearing flags on attachment: 125686 Committed r106874: <http://trac.webkit.org/changeset/106874>
WebKit Review Bot
Comment 5 2012-02-06 16:41:51 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.