postMessage leaks MemoryEvent object https://bugs.webkit.org/show_bug.cgi?id=77893

Patch by Greg Simon <gregsimon@chromium.org> on 2012-02-06
Reviewed by Adam Barth.

Changed from PassRefPtr().leakRef() to RefPtr.get() when
calling into FrameLoaderClient to stop +1 extra ref.

* page/DOMWindow.cpp:
(WebCore::DOMWindow::postMessageTimerFired):

Canonical link: https://commits.webkit.org/94792@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@106874 268f45cc-cd09-0410-ab3c-d52691b4dbfc